Fix portrait flickering

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -123,7 +123,7 @@
     .about_me {
         flex-direction: column;
         align-items: center;
-        background-position: 0% 21%;
+        background-position: 0px 200px;
         background-size: 50%;
       }
       
