--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -10,7 +10,7 @@
 .card {
     position: relative;
     width: 280px;
-    height: 350px;
+    height: 370px;
     margin: 0 auto;
     background: linear-gradient(to top, #1e3c72 0%, #1e3c72 1%, #2a5298 100%);
     border-radius: 15px;
