--- a/src/components/portrait.css
+++ b/src/components/portrait.css
@@ -1,7 +1,10 @@
 /* Required styles */
+.portrait_container {
+  width: 100%;
+}
+
 
 .image {
-    transform: scale(0.9, 0.9);
     transition: transform 0.2s ease-in;
   }
 
@@ -9,10 +12,6 @@
     transform-origin: 50% 50%;
     transform: translateY(4px) scale(1, 1);
     transition: transform 0.2s ease-in;
-  }
-  
-  .image:hover {
-    transform: scale(1, 1);
   }
   
   .image:hover .image__foreground {
